[package]
name = "memo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
rand = "0.8.4"
strum = { version = "0.23.0", features = ["derive"] }
strum_macros = "0.23.0"